tests/com.e1c.dt.check.form.itests/workspace/InvalidItemIdCheck/src/Catalogs/Catalog/Forms/MissingIdMultiple/Attributes/List/ExtInfo/ListSettings.dcss
<?xml version="1.0" encoding="UTF-8"?>
<Settings xmlns="http://v8.1c.ru/8.1/data-composition-system/settings" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xs="http://www.w3.org/2001/XMLSchema" xmlns:v8="http://v8.1c.ru/8.1/data/core" xmlns:v8ui="http://v8.1c.ru/8.1/data/ui" xmlns:style="http://v8.1c.ru/8.1/data/ui/style" xmlns:sys="http://v8.1c.ru/8.1/data/ui/fonts/system" xmlns:web="http://v8.1c.ru/8.1/data/ui/colors/web" xmlns:win="http://v8.1c.ru/8.1/data/ui/colors/windows" xmlns:dcscor="http://v8.1c.ru/8.1/data-composition-system/core">
	<filter>
		<viewMode>Normal</viewMode>
		<userSettingID>e638fddf-6be6-439f-85dd-202b96c6da3d</userSettingID>
	</filter>
	<order>
		<viewMode>Normal</viewMode>
		<userSettingID>787c806d-66e8-4316-b954-5c2232a2ecc5</userSettingID>
	</order>
	<conditionalAppearance>
		<viewMode>Normal</viewMode>
		<userSettingID>ef4974fe-651f-466c-8ba3-b7d29f990100</userSettingID>
	</conditionalAppearance>
	<itemsViewMode>Normal</itemsViewMode>
	<itemsUserSettingID>dabdc401-b4c7-4ecd-9b6e-88ab62538c28</itemsUserSettingID>
</Settings>
